deleteMember and deleteSkiPass progress